* 2007-10-25 - thorben.betten@open-xchange.com

 - Bugfix #9899: Reconstructing item handlers if order of fetch items
   changes during processing of FETCH response

* 2007-10-24 - thorben.betten@open-xchange.com

 - Mail transport's dataobjects made more abstract

* 2007-10-24 - marcus.klein@open-xchange.com

 - Bugfix #9807: Removed throw of ServletException on a not catched Exception.

* 2007-10-23 - thorben.betten@open-xchange.com

 - Bugfix #9914: Providing a charset in new String() constructor

* 2007-10-23 - francisco.laguna@open-xchange.com

 - Bugfix #9865: Differentiate resources and users by trying to load them.

* 2007-10-22 - francisco.laguna@open-xchange.com

 - Bugfix #9865: Less valiant logging for Notifications.

* 2007-10-22 - thorben.betten@open-xchange.com

 - Bugfix #9820: Fixed folder move operation if IMAP server does not
   support ACLs
 - Bugfix #9794: Moving folder (incl. its subfolder tree) to trash folder
   on folder deletion
 - Loading namespace folder only one time per user session
 - Bugfix #9852: Quoting replacement argument prior to invoking
   String.replaceFirst()
 - Bugfix #9922: Fetching ACL list in a safe manner when inserting or
   updating an IMAP folder. All ACL related actions are suppressed if ACLs
   cannot be obtained which is mostly the case in a missing ADMINISTER
   right due to a newer ACL extension.

* 2007-10-19 - marcus.klein@open-xchange.com

 - Bugfix #9764: This issue is fixed with the fix for bug 9807.

* 2007-10-18 - martin.kauss@open-xchange.com

 - Fixed bug #9772. One argument in an object not found exception was
   missing. This has been fixed.

* 2007-10-18 - marcus.klein@open-xchange.com

 - Bugfix #9800: Remaining entries inside del table after context delete
 - Bugfix #9581: Delete of all user contacts during the delete user process
   was not working if an unbound contacts occured.
 - Bugfix #9807: Catching all exceptions now in AJAX super servlet to prevent
   closed AJP sockets.